[gd_scene load_steps=4 format=3 uid="uid://b1nrhleq65330"]

[ext_resource type="Script" uid="uid://dwjymat26sw6a" path="res://game_seq_1.gd" id="1_5delc"]
[ext_resource type="Texture2D" uid="uid://cmdeaex31ya4f" path="res://Assets/4.png" id="1_7f62e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5delc"]
bg_color = Color(0.08627451, 0.08235294, 0.11372549, 1)
border_width_left = 13
border_width_top = 13
border_width_right = 13
border_width_bottom = 13
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 18.0
expand_margin_top = 28.0
expand_margin_right = 25.0
expand_margin_bottom = 45.0
shadow_color = Color(0, 0, 0, 0.9411765)
shadow_size = 6
shadow_offset = Vector2(0.3, 0.22)

[node name="MiniGame" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1159.0
offset_bottom = 644.0
script = ExtResource("1_5delc")
metadata/_edit_vertical_guides_ = [-563.0]

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1148.0
offset_bottom = 645.0
texture = ExtResource("1_7f62e")
expand_mode = 1

[node name="CupSprite" type="TextureRect" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 86.0
offset_top = -102.0
offset_right = 86.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 2

[node name="AddTeaButton" type="Button" parent="."]
layout_direction = 1
layout_mode = 0
offset_left = 809.0
offset_top = 388.0
offset_right = 1068.0
offset_bottom = 462.0
flat = true

[node name="AddMilkButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 787.0
offset_top = 65.0
offset_right = 1066.0
offset_bottom = 145.0
flat = true

[node name="AddSugarButton" type="Button" parent="."]
layout_mode = 0
offset_left = 810.0
offset_top = 283.0
offset_right = 1074.0
offset_bottom = 349.0
flat = true

[node name="StartBrewingButton" type="Button" parent="."]
layout_mode = 0
offset_left = 801.0
offset_top = 181.0
offset_right = 1064.0
offset_bottom = 247.0
flat = true

[node name="BackTostudyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 754.0
offset_top = 515.0
offset_right = 1054.0
offset_bottom = 597.0
flat = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 261.0
offset_top = 41.0
offset_right = 718.0
offset_bottom = 132.0

[node name="InstructionLabel" type="Label" parent="."]
layout_direction = 1
layout_mode = 0
offset_left = 95.0
offset_top = 85.0
offset_right = 704.0
offset_bottom = 153.0
mouse_filter = 0
theme_override_colors/font_color = Color(0.9166399, 0.91663986, 0.9166398, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_5delc")
horizontal_alignment = 1

[connection signal="pressed" from="AddTeaButton" to="." method="_on_add_tea_button_pressed"]
[connection signal="pressed" from="AddMilkButton" to="." method="_on_add_milk_button_pressed"]
[connection signal="pressed" from="AddSugarButton" to="." method="_on_add_sugar_button_pressed"]
[connection signal="pressed" from="StartBrewingButton" to="." method="_on_start_brewing_button_pressed"]
[connection signal="pressed" from="BackTostudyButton" to="." method="_on_back_tostudy_button_pressed"]
